# fastapi-pdf

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  db.py  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  db.py
app/core/: constants.py  middlewares.py  models.py
app/emails/: constants.py  services.py
app/stripe/: __init__.py  api.py  services.py
app/users/: api.py  constants.py  models.py  services.py
db/: schema.sql
db/migrations/: 20230925090948_models_table.sql
db/queries/users/: get_inivitation_key_user_uuid.sql  get_invitation_key.sql  get_user_login_by_email.sql  post_invitation_key.sql
settings/: base.py  gunicorn.conf.py
